Todos los GET de los endpoint depurados y listos
