# routes/initRoutes.go
@@ -8,14 +8,25 @@ import (
 )
 
 func InitRoutes(server *echo.Echo) {
-	server.GET("/", controllers.RootController)      //Status del servidor
-	server.GET("/api/", controllers.IndexController) //Index del servidor
-	server.GET("/docs/*", echoSwagger.WrapHandler)   //Iniciar el servicio de Swagger API
+	//Root
+	server.GET("/", controllers.RootController) //Status del servidor
+	//server.GET("/api/", controllers.IndexController) //Index del servidor
+	server.GET("/docs/*", echoSwagger.WrapHandler) //Iniciar el servicio de Swagger API
+	//Armaduras collection
+	server.GET("/api/armaduras/", controllers.GetArmadurasController)
+	server.GET("/api/armaduras/:id", controllers.GetArmaduraController)
+	//Armas collection
+	server.GET("/api/armas/", controllers.GetArmasController)
+	server.GET("/api/armas/:id", controllers.GetArmaController)
+	//Habilidades collection
+	server.GET("/api/habilidades/", controllers.GetHabilidadesController)
+	server.GET("/api/habilidades/:id", controllers.GetHabilidadController)
 	//Heroes collection
 	server.GET("/api/heroes/", controllers.GetheroesController)
 	server.GET("/api/heroes/:id", controllers.GetheroeController)
 	server.POST("/api/heroes/", controllers.CreateHeroeController)
 	server.PATCH("/api/heroes/:id", controllers.UpdateHeroeController)
-	//Habilidades collection
-	server.GET("/api/habilidades/:id", controllers.GetHabilidadController)
+	//Items collection
+	server.GET("/api/items/", controllers.GetItemssController)
+	server.GET("/api/items/:id", controllers.GetItemController)
 }
